fix welcome screens on mobile (scroll, bg, sizes)

--- a/src/project/product-list/styles/hero.pcss
+++ b/src/project/product-list/styles/hero.pcss
@@ -609,7 +609,7 @@
       background-image: url(../img/blue_bgr.png);
       background-repeat: no-repeat;
       background-size: cover;
-      background-position: -460px -80px;
+      background-position: -80px;
     }
     a{
       font-size: 36px;
